--- a/templates/Workers.html
+++ b/templates/Workers.html
@@ -2,12 +2,16 @@
 
 {% block title %}Worker{% endblock %}
 
+{% block css %}
+
+{% endblock %}
+
 {% block navhead %}Flow Vis{% endblock %}
 
 {% block href %}{{  url_for('users_file.dashboard', org_name=session['OrgName'])  }}{% endblock %}
 
-{% block navbody %}
-    <a class="text-white" href="/Logout">Logout</a>
+{% block navbar %}
+
 {% endblock %}
 
 {% block body %}
@@ -16,32 +20,56 @@
     <p>{{  Error  }}</p>
 </div>
 {% endif %}
-<div class = "col-md-12">
-    <center>
-        <h2 style="margin-top:10px;">Contract Lines</h2>
-        {% if session["RoleId"] > 1 %}
-	    <a class="btn btn-outline-success" href="{{  url_for('users_file.dashboard', org_name=session['OrgName'])  }}">Back to main menu <i class="fa fa-arrow-left"></i></a>
 
+<div class="container col-sm-12 text-center">
+	{% if session["RoleId"] != 1 %}
+	<h2 style="padding:5px;">Contract Lines</h2>
+	<div class="row">
+        <div class=" col-sm-4 text-center">
+            <a class="btn btn-primary work" href="{{  url_for('users_file.dashboard', org_name=session['OrgName'])  }}">Back to main menu <i class="fa fa-arrow-left"></i></a>
+        </div>
+        <div class=" col-sm-4 text-center">
+            <button class="btn btn-primary work" type="button" id="test">Clear Filters <i class="fas fa-filter"></i></button>
+        </div>
+        <div class=" col-sm-4 text-center">
+            <a class="btn btn-primary work" href="/Logout">Logout <i class="fas fa-power-off"></i></a>
+        </div>
+    </div>
+    {% else %}
+    <div class="row" style="padding:5px;">
+        <div class=" col-sm-4 text-center">
+            <button class="btn btn-primary work" type="button" id="test">Clear Filters <i class="fas fa-filter"></i></button>
+        </div>
+        <div class=" col-sm-4 text-center">
+            <h3>Contract Lines</h3>
+        </div>
+        <div class=" col-sm-4 text-center">
+            <a class="btn btn-primary work" href="/Logout">Logout <i class="fas fa-power-off"></i></a>
+        </div>
+    </div>
+    {% endif %}
+</div>
 
-	{% endif %}
-</center>
 	<table id="example2"  class="table compact table-bordered" style="width:100%">
     <thead class="bg-5">
       <tr class="text-center" style="border-bottom:none;">
-		<th>Reference</th>
+		<th>Contract Reference</th>
         <th>Contract</th>
         <th>Line Reference</th>
-		<th>Aluminium System</th>
+		<th>Product System</th>
+		<th>Due Date</th>
 		<th>Item Status</th>
       </tr>
       <tr class="text-center" style="border-top:none;">
-		<td>Reference</td>
+		<td>Contract Reference</td>
         <td>Contract</td>
         <td>Line Reference</td>
-		<td>Aluminium System</td>
+		<td>Product System</td>
+		<td>Due Date</td>
 		<td>Item Status</td>
       </tr>
     </thead>
+
     <tbody id="example" class="workers_table">
         {% for i in fast_assign %}
         {% if i.AssignedUserId == session['UserId'] %}
@@ -50,7 +78,8 @@
 				<td id="Contract{{  i.ContractItemId  }}">{{  i.Contract  }}</td>
 				<td id="LineReferenceNumber{{  i.ContractItemId  }}">{{  i.LineReferenceNumber  }}</td>
 				<td id="Description{{  i.ContractItemId  }}">{{  i.Description  }}</td>
-				<td id="Status{{  i.ContractItemId  }}">{{  i.Status  }}</td>
+				<td id="DueDate{{  i.ContractItemId  }}">{{  i.DueDate  }}</td>
+				<td id="Status{{  i.ContractItemId  }}">{{  i.Status  }}{% if i.isActivityEnd %}d{% else %}ed{% endif %}</td>
             </tr>
         {% endif %}
         {% endfor %}
@@ -61,7 +90,8 @@
 				<td id="Contract{{  i.ContractItemId  }}">{{  i.Contract  }}</td>
 				<td id="LineReferenceNumber{{  i.ContractItemId  }}">{{  i.LineReferenceNumber  }}</td>
 				<td id="Description{{  i.ContractItemId  }}">{{  i.Description  }}</td>
-				<td id="Status{{  i.ContractItemId  }}">{{  i.Status  }}</td>
+				<td id="DueDate{{  i.ContractItemId  }}">{{  i.DueDate  }}</td>
+				<td id="Status{{  i.ContractItemId  }}">{{  i.Status  }}{% if i.isActivityEnd %}d{% else %}ed{% endif %}</td>
             </tr>
         {% endif %}
         {% endfor %}
@@ -82,32 +112,40 @@
             <input type="hidden" id="CIIA"  name="CIIA">
 
             <div class="container">
-                <div class="row  ">
-                    <div class="col-sm-4" text-align="left">
+                <div class="row">
+                    <div class="col-sm-3 offset-sm-1 al1">
         	            <p id="contr" class="items_history"></p>
                     </div>
-                    <div class="col-sm-4" text-align="center">
+                    <div class="col-sm-4">
                         <p id = "LRN" class="items_history"></p>
                     </div>
-                    <div class="col-sm-4" text-align="right">
+                    <div class="col-sm-3 al3">
                         <p id = "Dsc" class="items_history"></p>
+                    </div>
+                    <div class="col-sm-1 al4" text-align="right">
+                        <button type="button" class="close al2" data-dismiss="modal">&times;</button>
                     </div>
                 </div>
             </div>
 
             <div id="showwhenstart" style="display:none;">
-            <p>Current activity '<b id="ActStatusJQ"></b>' needs to be completed</p>
+            <p>Current activity '<b id="ActStatusJQ"></b>' needs to be completed.</p>
             </div>
 
             <div id="showwhencomplete" class="container" style="display:none;">
                 <div class="row">
                     <div class="col-sm-12">
-                    <p>Previous activity was '<b id="ActStatus"></b>'</p>
+                    <p>Previous activity was '<b id="ActStatus"></b>'. Select a new activity to start:</p>
                     </div>
             {% for j in base_activities_data %}
                     <div class="col-sm-6">
-
-                        <input type="submit" class="btn btn-warning no-show" style="border:#{{  j.BgColor  }} !important; background-color:#{{  j.BgColor  }} !important; font-size:11px; font-weight: bold;" name="UpdateStatus" value="{{  j.Activity  }}">
+                        {% if j.Activity != "Cancelled" %}
+                        <span style="height:40px; margin-bottom:10px; padding:10px;">{{  loop.index  }}</span>
+                        <input type="submit" class="btn btn-warning no-show" style="border:1px solid #{{  j.BgColor  }} !important; width:80%; height:40px; !important; font-size:14px; background-color:#{{  j.BgColor  }} !important;  font-weight: bold;" name="UpdateStatus" value="{{  j.Activity  }}">
+                        {% else %}
+                        <span style="height:40px; margin-bottom:10px; padding:10px;">{{  loop.index  }}</span>
+                        <input type="submit" class="btn btn-warning no-show" style="border:1px solid red !important; color: red !important; width:80%; height:40px; !important; font-size:14px; background-color:white !important;  font-weight: bold;" name="UpdateStatus" value="{{  j.Activity  }}">
+                        {% endif %}
                     </div>
             {% endfor %}
                 </div>
@@ -115,12 +153,10 @@
             </center>
         </div>
   </div>
-      <div class="modal-footer">
-        <input type="submit" class="btn btn-primary no-show" id = "CompAct" style="display:none;" name="UpdateStatus" value="Complete Activity">
-        <input type="submit" class="btn btn-danger no-show" name="UpdateStatus" value="Cancel Item">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        </form>
+      <div class="modal-footer" style="display:none;" id = "CompAct">
+        <input type="submit" class="btn btn-primary no-show"  name="UpdateStatus" value="Complete Activity">
       </div>
+      </form>
     </div>
   </div>
 </div>
@@ -168,37 +204,16 @@ $('#orderModal').on('show.bs.modal', function (event) {
 });
 </script>
 
-<!--script>
-$(document).ready(function() {
-    $('#example2 thead td').each( function () {
-        var title = $('#example2 thead th').eq( $(this).index() ).text();
-        $(this).html( '<input class="searching" type="text" placeholder=" Search..." />' );
-    } );
-
-    var table = $('#example2').DataTable({"ordering": false, "fixedHeader": {header: true}, "pageLength": 50, "aaSorting": []});
-
-    table.columns().eq( 0 ).each( function ( colIdx ) {
-        $( 'input', table.column( colIdx ).header() ).on( 'keyup change', function () {
-            table
-                .column( colIdx )
-                .search( this.value )
-                .draw();
-        } );
-    } );
-    // $('#example2').DataTable({searching: false, "pageLength": 50, "aaSorting": []});
-} );
-</script-->
-
 <script>
 $(document).ready(function() {
     // Setup - add a text input to each footer cell
     $('#example2 thead td').each( function () {
         var title = $(this).text();
-        $(this).html( '<input class="searching" type="text" placeholder="   Search..." />' );
+        $(this).html( '<input class="searching" id="asdasdasd" type="search" placeholder="   Search..." />' );
     } );
 
     // DataTable
-    var table = $('#example2').DataTable({"ordering": false, "fixedHeader": {header: true}, "pageLength": 50, "aaSorting": []});
+    var table = $('#example2').DataTable({"ordering": false, "dom": 'rtip', "fixedHeader": {header: true}, "pageLength": 50, "aaSorting": []});
 
     // Apply the search
     table.columns().every( function () {
@@ -214,6 +229,11 @@ $(document).ready(function() {
     } );
 } );
 
+$('#test').click(function() {
+    $('.searching').val('');
+    table.search('').draw();
+});
 </script>
+
 {% endblock %}
 
