--- a/templates/contract_report.html
+++ b/templates/contract_report.html
@@ -27,7 +27,7 @@
         <th>Contract Name</th>
 		<th>Contract Due Date</th>
 		<th>Line Reference</th>
-		<th>Aluminium System</th>
+		<th>Product System</th>
 		<th>Rand Value</th>
 		<th>Item Status</th>
       </tr>
@@ -36,7 +36,7 @@
         <td>Contract Name</td>
         <td>Contract Due Date</td>
         <td>Line Reference</td>
-		<td>Aluminium System</td>
+		<td>Product System</td>
 		<td>Rand Value</td>
 		<td>Item Status</td>
       </tr>
