--- a/templates/base.html
+++ b/templates/base.html
@@ -1,54 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{% block title %}{% endblock %}</title>
-    <meta charset="utf-8">
+  <title>{% block title %}{% endblock %}</title>
+  <meta charset="utf-8">
   <!--meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"-->
   <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=yes">
   <meta name="description" content="">
   <meta name="mobile-web-app-capable" content="yes">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="#">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-barstyle" content="black-translucent">
+  <link rel="apple-touch-icon" href="icon-152.png">
+  <meta name="author" content="">
+  <link rel="shortcut icon" href="#">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
-  <!--script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script-->
   <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
   <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
   <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/fixedheader/3.1.5/js/dataTables.fixedHeader.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/fixedheader/3.1.2/css/fixedHeader.dataTables.min.css">
-  <!--link rel="stylesheet"  href="{{ url_for('static', filename='css/Data_Tables.css') }}"-->
   <link rel="stylesheet"  href="{{ url_for('static', filename='css/StyleSheet.css') }}">
-  <link rel="shortcut icon" sizes="196x196" href="{{ url_for('static', filename='images/appicon.png') }}">
+  <link rel="shortcut icon" sizes="196x196" href="{{ url_for('static', filename='images/logo.png') }}">
 
-
-    {% block css %}
-    {% endblock %}
+  {% block css %}
+  {% endblock %}
 </head>
 
 <body>
 
+{% block navbar %}
 <nav class="navbar navbar-expand navbar-dark bg-1">
-  <a class="navbar-brand" href={% block href %}/{% endblock %}>{% block navhead %}Flow Vis{% endblock %}</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <a class="navbar-brand" href={% block href %}/{% endblock %}>{% block navhead %}Flow Vis{% endblock %}</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <div class="collapse navbar-collapse" id="navbarsExample02">
-    <ul class="navbar-nav ml-auto">
-      <!--li class="nav-item">
-        <a class="nav-link" href="/Logout">Logout</a>
-      </li-->
-      {% block navbody %}
-
-      {% endblock %}
-    </ul>
-  </div>
+    <div class="collapse navbar-collapse" id="navbarsExample02">
+        <ul class="navbar-nav ml-auto">
+            {% block navbody %}
+            <li class="nav-item">
+                <a class="text-white" href="/Logout">Logout <i class="fas fa-power-off"></i></a>
+            </li>
+            {% endblock %}
+        </ul>
+    </div>
 </nav>
+{% endblock %}
 
 {% block body %}
 {% endblock %}
