--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,14 +2,7 @@
 
 {% block title %}Flow Vis{% endblock %}
 
-
-
 {% block href %}"{{  url_for('users_file.dashboard', org_name=session['OrgName'])  }}"{% endblock %}
-
-{% block navbody %}
-    <a class="text-white" href="/Logout">Logout</a>
-
-{% endblock %}
 
 {% block body %}
 {% if Error|length > 1 %}
@@ -27,54 +20,44 @@
 {% if session["RoleId"] == 4 %}
 <div class="container col-sm-12 text-center">
 	<div class="row">
-        <div class=" col-sm-6 text-center">
+        <div class=" col-sm-3 text-center">
 		    <div class="card  bg-5">
-                <a href="{{  url_for('contracts_file.manage_contracts', org_name=session['OrgName'])  }}"><i class="fa fa-file col-sm-12 picture"></i></a><br>
+                <a href="{{  url_for('contracts_file.manage_contracts', org_name=session['OrgName'])  }}"><i class="fas fa-file picture"></i></a><br>
                 <div class="container">
-                    <a class="bg-2" href="{{  url_for('contracts_file.manage_contracts', org_name=session['OrgName'])  }}"><h4 style="color:#0e1111;">Contracts</h4></a>
-
+                    <a class="bg-2" href="{{  url_for('contracts_file.manage_contracts', org_name=session['OrgName'])  }}"><h6 style="color:#0e1111;">Contracts</h6></a>
                 </div>
             </div>
         </div>
-        <div class=" col-sm-6 text-center">
+        <div class=" col-sm-3 text-center">
 		    <div class="card  bg-5">
-                <a href="{{  url_for('contracts_file.worker', org_name=session['OrgName'], user_id=session['UserId'])  }}"><i class="fa fa-folder-open col-sm-12 picture"></i></a><br>
+                <a href="{{  url_for('contracts_file.worker', org_name=session['OrgName'], user_id=session['UserId'])  }}"><i class="fas fa-file-upload picture"></i></a><br>
                 <div class="container">
-                    <a class="bg-2" href="{{  url_for('contracts_file.worker', org_name=session['OrgName'], user_id=session['UserId'])  }}"><h4 style="color:#0e1111;">Contract Items</h4></a>
-
+                    <a class="bg-2" href="{{  url_for('contracts_file.worker', org_name=session['OrgName'], user_id=session['UserId'])  }}"><h6 style="color:#0e1111;">Contract Items</h6></a>
+                </div>
+            </div>
+		</div>
+		<div class=" col-sm-3 text-center">
+		    <div class="card  bg-5">
+                <a href="{{  url_for('report_file.contract_report', org_name=session['OrgName'])  }}"><i class="far fa-chart-bar picture"></i></a><br>
+                <div class="container">
+                    <a class="bg-2" href="{{  url_for('report_file.contract_report', org_name=session['OrgName'])  }}"><h6 style="color:#0e1111;">Reports</h6></a>
+                </div>
+            </div>
+		</div>
+        <div class=" col-sm-3 text-center">
+		    <div class="card  bg-5">
+                <a href="{{  url_for('users_file.manage_users', org_name=session['OrgName'])  }}"><i class="fas fa-user picture"></i></a><br>
+                <div class="container">
+                    <a class="bg-2" href="{{  url_for('users_file.manage_users', org_name=session['OrgName'])  }}"><h6 style="color:#0e1111;">Users</h6></a>
                 </div>
             </div>
 		</div>
 	</div>
 </div>
-
-<div class="container col-sm-12 text-center">
-	<div class="row">
-		<div class=" col-sm-6 text-center">
-		    <div class="card  bg-5">
-                <a href="{{  url_for('report_file.contract_report', org_name=session['OrgName'])  }}"><i class="fa fa-area-chart col-sm-12 picture"></i></a><br>
-                <div class="container">
-                    <a class="bg-2" href="{{  url_for('report_file.contract_report', org_name=session['OrgName'])  }}"><h4 style="color:#0e1111;">Reports</h4></a>
-
-                </div>
-            </div>
-		</div>
-        <div class=" col-sm-6 text-center">
-		    <div class="card  bg-5">
-                <a href="{{  url_for('users_file.manage_users', org_name=session['OrgName'])  }}"><i class="fa fa-user col-sm-12 picture"></i></a><br>
-                <div class="container">
-                    <a class="bg-2" href="{{  url_for('users_file.manage_users', org_name=session['OrgName'])  }}"><h4 style="color:#0e1111;">Users</h4></a>
-
-                </div>
-            </div>
-		</div>
-	</div>
-</div>
-
 <div class = "col-md-12">
     <br>
 	<center>
-	    <a href="{{  url_for('users_file.logout_org')  }}" class="btn btn-outline-success">Logout Organisation</a>
+	    <a style="width:250px" href="{{  url_for('users_file.logout_org')  }}" class="btn btn-outline-success">Logout Organisation <i class="fas fa-power-off"></i></a>
 	</center>
 	<br>
 </div>
@@ -85,60 +68,54 @@
 	<div class="row">
         <div class=" col-sm-4 text-center">
 		    <div class="card  bg-5">
-                <a href="{{  url_for('contracts_file.manage_contracts', org_name=session['OrgName'])  }}"><i class="fa fa-file col-sm-12 picture"></i></a><br>
+                <a href="{{  url_for('contracts_file.manage_contracts', org_name=session['OrgName'])  }}"><i class="fa fa-file picture"></i></a><br>
                 <div class="container">
-                    <a class="bg-2" href="{{  url_for('contracts_file.manage_contracts', org_name=session['OrgName'])  }}"><h4 style="color:#0e1111;">Contracts</h4></a>
-
+                    <a class="bg-2" href="{{  url_for('contracts_file.manage_contracts', org_name=session['OrgName'])  }}"><h6 style="color:#0e1111;">Contracts</h6></a>
                 </div>
             </div>
         </div>
         <div class=" col-sm-4 text-center">
 		    <div class="card  bg-5">
-                <a href="{{  url_for('contracts_file.worker', org_name=session['OrgName'], user_id=session['UserId'])  }}"><i class="fa fa-folder-open col-sm-12 picture"></i></a><br>
+                <a href="{{  url_for('contracts_file.worker', org_name=session['OrgName'], user_id=session['UserId'])  }}"><i class="fa fa-file-upload picture"></i></a><br>
                 <div class="container">
-                    <a class="bg-2" href="{{  url_for('contracts_file.worker', org_name=session['OrgName'], user_id=session['UserId'])  }}"><h4 style="color:#0e1111;">Contract Items</h4></a>
-
+                    <a class="bg-2" href="{{  url_for('contracts_file.worker', org_name=session['OrgName'], user_id=session['UserId'])  }}"><h6 style="color:#0e1111;">Contract Items</h6></a>
                 </div>
             </div>
 		</div>
 		<div class=" col-sm-4 text-center">
 		    <div class="card  bg-5">
-                <a href="{{  url_for('report_file.contract_report', org_name=session['OrgName'])  }}"><i class="fa fa-area-chart col-sm-12 picture"></i></a><br>
+                <a href="{{  url_for('report_file.contract_report', org_name=session['OrgName'])  }}"><i class="far fa-chart-bar picture"></i></a><br>
                 <div class="container">
-                    <a class="bg-2" href="{{  url_for('report_file.contract_report', org_name=session['OrgName'])  }}"><h4 style="color:#0e1111;">Reports</h4></a>
+                    <a class="bg-2" href="{{  url_for('report_file.contract_report', org_name=session['OrgName'])  }}"><h6 style="color:#0e1111;">Reports</h6></a>
 
                 </div>
             </div>
 		</div>
 	</div>
 </div>
-
 {% endif %}
-
 {% if session["RoleId"] == 2 %}
 <div class="container col-sm-12 text-center">
 	<div class="row">
         <div class=" col-sm-6 text-center">
 		    <div class="card  bg-5">
-                <a href="{{  url_for('contracts_file.manage_contracts', org_name=session['OrgName'])  }}"><i class="fa fa-file col-sm-12 picture"></i></a><br>
+                <a href="{{  url_for('contracts_file.manage_contracts', org_name=session['OrgName'])  }}"><i class="fa fa-file picture"></i></a><br>
                 <div class="container">
-                    <a class="bg-2" href="{{  url_for('contracts_file.manage_contracts', org_name=session['OrgName'])  }}"><h4 style="color:#0e1111;">Contracts</h4></a>
+                    <a class="bg-2" href="{{  url_for('contracts_file.manage_contracts', org_name=session['OrgName'])  }}"><h6 style="color:#0e1111;">Contracts</h6></a>
 
                 </div>
             </div>
         </div>
         <div class=" col-sm-6 text-center">
 		    <div class="card  bg-5">
-                <a href="{{  url_for('contracts_file.worker', org_name=session['OrgName'], user_id=session['UserId'])  }}"><i class="fa fa-folder-open col-sm-12 picture"></i></a><br>
+                <a href="{{  url_for('contracts_file.worker', org_name=session['OrgName'], user_id=session['UserId'])  }}"><i class="fa fa-file-upload picture"></i></a><br>
                 <div class="container">
-                    <a class="bg-2" href="{{  url_for('contracts_file.worker', org_name=session['OrgName'], user_id=session['UserId'])  }}"><h4 style="color:#0e1111;">Contract Items</h4></a>
+                    <a class="bg-2" href="{{  url_for('contracts_file.worker', org_name=session['OrgName'], user_id=session['UserId'])  }}"><h6 style="color:#0e1111;">Contract Items</h6></a>
 
                 </div>
             </div>
 		</div>
 	</div>
 </div>
-
 {% endif %}
-
 {% endblock %}
