--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -18,7 +18,7 @@
 </div>
 
 {% if session["RoleId"] == 4 %}
-<div class="container col-sm-12 text-center">
+<div style="" class="container col-sm-12 text-center">
 	<div class="row">
         <div class=" col-sm-3 text-center">
 		    <div class="card  bg-5">
