--- a/templates/Workers.html
+++ b/templates/Workers.html
@@ -3,7 +3,27 @@
 {% block title %}Worker{% endblock %}
 
 {% block css %}
+<style>
+#loading {
+   width: 100%;
+   height: 100%;
+   top: 0;
+   left: 0;
+   position: fixed;
+   display: none;
+   opacity: 0.7;
+   background-color: #fff;
+   z-index: 99;
+   text-align: center;
+}
 
+#loading-image {
+  position: absolute;
+  top: 48%;
+  left: 48%;
+  z-index: 100;
+}
+</style>
 {% endblock %}
 
 {% block navhead %}Flow Vis{% endblock %}
@@ -15,6 +35,11 @@
 {% endblock %}
 
 {% block body %}
+
+<div id="loading">
+    <img id="loading-image" src="{{ url_for('static', filename='images/ajax-loader.gif') }}" alt="Loading..." />
+</div>
+
 {% if Error|length > 1 %}
 <div class="danger text-center">
     <p>{{  Error  }}</p>
@@ -24,7 +49,7 @@
 <div class="container col-sm-12 text-center">
 	{% if session["RoleId"] != 1 %}
 	<h2 style="padding:5px;">Contract Lines</h2>
-	<div class="row">
+	<div class="row" style="padding-bottom:5px;">
         <div class=" col-sm-4 text-center">
             <a class="btn btn-primary work" href="{{  url_for('users_file.dashboard', org_name=session['OrgName'])  }}">Back to main menu <i class="fa fa-arrow-left"></i></a>
         </div>
@@ -73,7 +98,7 @@
     <tbody id="example" class="workers_table">
         {% for i in fast_assign %}
         {% if i.AssignedUserId == session['UserId'] %}
-            <tr class='clickable-row1' data-toggle="modal" data-id="{{  i.ContractItemId  }}" data-asid="{{  i.ActivityStatusId  }}" data-actend="{{  i.isActivityEnd  }}" data-target="#orderModal" style="background-color:#122854; color:#fff; opacity:0.5;">
+            <tr class='clickable-row1' href="#" data-toggle="modal" data-id="{{  i.ContractItemId  }}" data-asid="{{  i.ActivityStatusId  }}" data-actend="{{  i.isActivityEnd  }}" data-target="#orderModal" style="background-color:#122854; color:#fff; opacity:0.5;">
 				<td id="ContractReference{{  i.ContractItemId  }}">{{  i.ContractReference  }}</td>
 				<td id="Contract{{  i.ContractItemId  }}">{{  i.Contract  }}</td>
 				<td id="LineReferenceNumber{{  i.ContractItemId  }}">{{  i.LineReferenceNumber  }}</td>
@@ -85,7 +110,7 @@
         {% endfor %}
         {% for i in fast_assign %}
         {% if i.AssignedUserId != session['UserId'] %}
-            <tr class='clickable-row1' data-toggle="modal" data-id="{{  i.ContractItemId  }}" data-asid="{{  i.ActivityStatusId  }}" data-actend="{{  i.isActivityEnd  }}" data-target="#orderModal" >
+            <tr class='clickable-row1' href="#" data-toggle="modal" data-id="{{  i.ContractItemId  }}" data-asid="{{  i.ActivityStatusId  }}" data-actend="{{  i.isActivityEnd  }}" data-target="#orderModal" >
 				<td id="ContractReference{{  i.ContractItemId  }}">{{  i.ContractReference  }}</td>
 				<td id="Contract{{  i.ContractItemId  }}">{{  i.Contract  }}</td>
 				<td id="LineReferenceNumber{{  i.ContractItemId  }}">{{  i.LineReferenceNumber  }}</td>
@@ -100,7 +125,7 @@
 
 
 <!-- Add Modal -->
-<div class="modal fade" id="orderModal" tabindex="-1" role="dialog" aria-labelledby="orderModalLabel" aria-hidden="true">
+<div class="modal" id="orderModal" tabindex="-1" role="dialog" aria-labelledby="orderModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <form class="form-horizontal" action="{{  url_for('contracts_file.worker', org_name=session['OrgName'], user_id=session['UserId'])  }}" method="POST">
@@ -141,10 +166,10 @@
                     <div class="col-sm-6">
                         {% if j.Activity != "Cancelled" %}
                         <span style="height:40px; margin-bottom:10px; padding:10px;">{{  loop.index  }}</span>
-                        <input type="submit" class="btn btn-warning no-show" style="border:1px solid #{{  j.BgColor  }} !important; width:80%; height:40px; !important; font-size:14px; background-color:#{{  j.BgColor  }} !important;  font-weight: bold;" name="UpdateStatus" value="{{  j.Activity  }}">
+                        <input onclick="showDiv()" type="submit" class="btn btn-warning no-show" style="border:1px solid #{{  j.BgColor  }} !important; width:80%; height:40px; !important; font-size:14px; background-color:#{{  j.BgColor  }} !important;  font-weight: bold;" name="UpdateStatus" value="{{  j.Activity  }}">
                         {% else %}
                         <span style="height:40px; margin-bottom:10px; padding:10px;">{{  loop.index  }}</span>
-                        <input type="submit" class="btn btn-warning no-show" style="border:1px solid red !important; color: red !important; width:80%; height:40px; !important; font-size:14px; background-color:white !important;  font-weight: bold;" name="UpdateStatus" value="{{  j.Activity  }}">
+                        <input onclick="showDiv()" type="submit" class="btn btn-warning no-show" style="border:1px solid red !important; color: red !important; width:80%; height:40px; !important; font-size:14px; background-color:white !important;  font-weight: bold;" name="UpdateStatus" value="{{  j.Activity  }}">
                         {% endif %}
                     </div>
             {% endfor %}
@@ -154,7 +179,7 @@
         </div>
   </div>
       <div class="modal-footer" style="display:none;" id = "CompAct">
-        <input type="submit" class="btn btn-primary no-show"  name="UpdateStatus" value="Complete Activity">
+        <input type="submit" class="btn btn-primary no-show"  name="UpdateStatus" value="Complete Activity" onclick="showDiv()">
       </div>
       </form>
     </div>
@@ -231,9 +256,18 @@ $(document).ready(function() {
 
 $('#test').click(function() {
     $('.searching').val('');
-    table.search('').draw();
+    $('#example2').dataTable().fnDestroy();
+    $('#example2').DataTable({"ordering": false, "dom": 'rtip', "fixedHeader": {header: true}, "pageLength": 50, "aaSorting": []});
 });
 </script>
-
+<script>
+    function showDiv() {
+      document.getElementById('loading').style.display = "block";
+      document.getElementById('orderModal').style.display = "none";
+    }
+    </script>
+<script>
+    window.onload = function(){ document.getElementById("loading").style.display = "none" }
+</script>
 {% endblock %}
 
