--- a/static/css/StyleSheet.css
+++ b/static/css/StyleSheet.css
@@ -83,9 +83,13 @@ body {
 }
 
 .items_history {
-    color:#808080;
     font-weight: bold;
     font-size:16px;
+    border: 2px solid #FFFFFF;
+    color: #808080;
+    text-align: center;
+    width:100%;
+    background-color:#FFFFFF;
 }
 
 h2, h4, h6 {
@@ -184,7 +188,16 @@ a:hover, .change:hover {
     padding-left:10px;
     background-color: #f44336;
     color:#fff;
-    line-height:1.5;
+    line-height:1.8;
+    font-size:14px;
+}
+
+.confirm {
+    padding-left:10px;
+    background-color: #0fe013;
+    color:#fff;
+    line-height:1.8;
+    font-size:14px;
 }
 
 
@@ -311,8 +324,8 @@ label {
 
 .btn-warning {
     opacity:0.8;
-
-    height:50px; !important;
+    width:100%;
+    height:40px; !important;
     margin-bottom:10px;
     color:#fff !important;
     border-radius:25px;
@@ -322,7 +335,6 @@ label {
 
 .btn-warning:hover, .btn-warning:focus {
     opacity:1;
-
     margin-bottom:10px;
     color:#fff !important;
     border-radius:25px;
